feat: Resolution problème de lancement de l'appli